<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.dreamconnected.coa.lxcmanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="io.dreamconnected.coa.lxcmanager.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_repos"
        android:name="io.dreamconnected.coa.lxcmanager.ui.repos.ReposFragment"
        android:label="@string/title_repos"
        tools:layout="@layout/fragment_repos" />

    <fragment
        android:id="@+id/navigation_container_overview"
        android:name="io.dreamconnected.coa.lxcmanager.ui.overview.ContainerOverviewFragment"
        tools:layout="@layout/fragment_container_overview" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="io.dreamconnected.coa.lxcmanager.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>